--- a/practice/docker-file1.yaml
+++ b/practice/docker-file1.yaml
@@ -1,14 +1,8 @@
-FROM ubuntu
+FROM python:3.9-slim
 
 WORKDIR /app
+COPY app.py /app
 
-COPY requirements.txt /app/
-COPY devops /app/
+RUN pip install flask
 
-RUN apt-get update && \
-    apt-get install -y python3 python3-pip && \
-    pip install -r requirements.txt && \
-    cd devops
-ENTRYPOINT ["python3"]
-CMD ["manage.py", "runserver", "0.0.0:8000"]
-
+CMD ["python", "app.py"]
