--- a/practice/deployment.yaml
+++ b/practice/deployment.yaml
@@ -1,27 +1,19 @@
-apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-master
+  name: flask-deployment
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: redis
-      role: master
-      tier: backend
-  replicas: 1
+      app: flask
   template:
     metadata:
       labels:
-        app: redis
-        role: master
-        tier: backend
+        app: flask
     spec:
       containers:
-      - name: master
-        image: registry.k8s.io/redis:e2e  # or just image: redis
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
+      - name: flask
+        image: flask-local:v1  # í±ˆ LOCAL image
         ports:
-        - containerPort: 6379
+        - containerPort: 5000
