--- a/02.test-docker-file/Dockerfile
+++ b/02.test-docker-file/Dockerfile
@@ -1,5 +1,5 @@
 #base image
-FROM node:20-slim
+iFROM node:20-slim
 
 #working directory
 WORKDIR /app
@@ -14,7 +14,7 @@ RUN npm install
 COPY . .
 
 #Port documentation
-EXPOSE 2000
+EXPOSE 8347
 
 #Environmente variable
 ENV NODE_ENV=production
