--- a/03.test-docker-file/Dockerfile
+++ b/03.test-docker-file/Dockerfile
@@ -15,3 +15,9 @@ FROM nginx:alpine
 
 #coping the files from 1st to the destination point
 COPY --from=build /app/build /usr/share/nginx/html
+
+#app will run on 80
+EXPOSE 80
+
+#running the cmd command
+CMD ["nginx", "-g", "daemon off;"]
