--- a/04.test-docker-file/Dockerfile
+++ b/04.test-docker-file/Dockerfile
@@ -1,20 +1,16 @@
-# Build Stage: use official Go image
-FROM golang:1.22 AS build
+FROM fedora:latest
+
+RUN dnf -y update && \
+    dnf -y install golang git && \
+    dnf clean all
 
 WORKDIR /app
 
 COPY . .
 
-# Optional: disable CGO for static binary
 ENV CGO_ENABLED=0
 
-# Build Go app
 RUN go build -o /app .
-
-# Final Stage: minimal scratch image
-FROM scratch
-
-COPY --from=build /app /app
 
 EXPOSE 8080
 ENTRYPOINT ["/app"]
