--- a/04.test-docker-file/Dockerfile
+++ b/04.test-docker-file/Dockerfile
@@ -1,17 +1,21 @@
-FROM fedora:latest
-
-RUN dnf -y update && \
-    dnf -y install golang git && \
-    dnf clean all
+FROM golang:alpine AS build
 
 WORKDIR /app
 
+# Copy the Go source code
 COPY . .
 
+# Set Go environment
 ENV CGO_ENABLED=0
 
+# Initialize go module (if not already in your repo)
+RUN go mod init calculator && go mod tidy
+
+# Build the Go app
 RUN go build -o /app .
 
+FROM scratch
+COPY --from=build /app /app
 EXPOSE 8080
 ENTRYPOINT ["/app"]
 
